--- a/force-app/main/default/lwc/eMS_LeaveRequest_Table/eMS_LeaveRequest_Table.css
+++ b/force-app/main/default/lwc/eMS_LeaveRequest_Table/eMS_LeaveRequest_Table.css
@@ -49,6 +49,7 @@ table {
 .table-container {
   max-height: 150px; /* set maximum height */
   overflow: auto; /* enable vertical scrollbar */
+  padding-left: 5px;
 }
 
 .table-container::-webkit-scrollbar {
