--- a/force-app/main/default/lwc/calenderpto/calenderpto.css
+++ b/force-app/main/default/lwc/calenderpto/calenderpto.css
@@ -21,6 +21,8 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    min-height: 130px;
+    max-height: 130px;
 }
 
 .child1 {
