--- a/force-app/main/default/layouts/Certifications__c-Certification Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Certifications__c-Certification Layout.layout-meta.xml
@@ -15,6 +15,22 @@
                 <behavior>Edit</behavior>
                 <field>Certification_Name__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Required</behavior>
+                <field>Type__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Skill__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Skill_Rating__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Last_Used_Project_Name__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
