--- a/force-app/main/default/layouts/Skill__c-Skill Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Skill__c-Skill Layout.layout-meta.xml
@@ -51,6 +51,10 @@
         <fields>NAME</fields>
         <relatedList>Resource_Request__c.Skills__c</relatedList>
     </relatedLists>
+    <relatedLists>
+        <fields>NAME</fields>
+        <relatedList>Certifications__c.Skill__c</relatedList>
+    </relatedLists>
     <showEmailCheckbox>false</showEmailCheckbox>
     <showHighlightsPanel>false</showHighlightsPanel>
     <showInteractionLogPanel>false</showInteractionLogPanel>
