Update Resource_Request__c-Resource Request Layout.layout-meta.xml

--- a/force-app/main/default/layouts/Resource_Request__c-Resource Request Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Resource_Request__c-Resource Request Layout.layout-meta.xml
@@ -33,7 +33,7 @@
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
-                <field>Resource_Role__c</field>
+                <field>Resource_Role1__c</field>
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
